# ccpa-rag-explorer

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  ccpa_indexer.py  ccpa_parser.py  ccpa_searcher.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_results.json
data/: ccpa_statute.txt
