[project]
name = "ccpa-rag-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "huggingface-hub>=1.5.0",
    "numpy>=1.24.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.3.0",
    "uvicorn>=0.41.0",
]
